--- a/class-mock/package.json
+++ b/class-mock/package.json
@@ -8,9 +8,7 @@
   },
   "author": "Thomas Robertz",
   "license": "ISC",
-  "dependencies": {
-    "nearley": "^2.19.7"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.1.3"
