--- a/ag_grid/package.json
+++ b/ag_grid/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "ag-grid-angular": "^33.0.3",
+    "ag-grid-demo": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
